--- a/22-English Dictionary/style.css
+++ b/22-English Dictionary/style.css
@@ -141,3 +141,11 @@ input::placeholder {
 /* .example {
   border: 2px solid #4d59fb;
 } */
+.bold {
+  margin-left: 6px;
+  font-family: "Poppins", sans-serif;
+  letter-spacing: 1.3px;
+  color: rgb(0, 0, 0);
+  opacity: 1;
+  font-weight: bold;
+}
