--- a/22-English Dictionary/style.css
+++ b/22-English Dictionary/style.css
@@ -82,6 +82,7 @@ input::placeholder {
   color: gray;
   font-size: 20px;
   font-weight: bold;
+  display: none;
 }
 .cancel iconify-icon {
   font-size: 25px;
