--- a/23-Memory Card Game/style.css
+++ b/23-Memory Card Game/style.css
@@ -13,10 +13,21 @@ img {
   width: 40px;
   position: relative;
 }
-view {
+
+.view {
+  width: 100px;
+  height: 100px;
+  display: flex;
   position: relative;
 }
-.view::before {
+.view img {
+  margin: auto;
+}
+
+/* view {
+  position: relative;
+} */
+/* .view::before {
   width: 100%;
   height: 100%;
   position: absolute;
@@ -26,4 +37,27 @@ view {
   backface-visibility: hidden;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
   transition: transform 0.25s linear;
+} */
+
+/* .center {
+  width: 100%;
+  height: 50vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+} */
+.view::before {
+  content: "?";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: red;
+  z-index: 1000;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 50px;
 }
