--- a/23-Memory Card Game/style.css
+++ b/23-Memory Card Game/style.css
@@ -7,12 +7,11 @@
 body {
   height: 100vh;
   display: flex;
-  background: #060ab2;
+  background: #6563ff;
 }
-
 .memory-game {
-  width: 440px;
-  height: 380px;
+  width: 840px;
+  height: 440px;
   margin: auto;
   display: flex;
   flex-wrap: wrap;
@@ -46,7 +45,7 @@ body {
   padding: 20px;
   position: absolute;
   border-radius: 5px;
-  background: #1c7ccc;
+  background: #0f3657;
   backface-visibility: hidden;
 }
 
