--- a/23-Memory Card Game/style.css
+++ b/23-Memory Card Game/style.css
@@ -19,24 +19,25 @@ body {
 }
 .stats {
   position: absolute;
-  top: 50px;
+  top: 80px;
   left: 50%;
   transform: translateX(-50%);
   display: flex;
-  justify-content: space-between;
+  justify-content: space-around;
   gap: 20px;
-  width: 500px;
+  width: 550px;
   background-color: rgb(227, 177, 40);
   padding: 15px;
   color: white;
   text-align: center;
+  font-family: sans-serif;
 }
 .stats p {
-  font-size: 20px;
+  font-size: 18px;
   font-weight: bold;
 }
 .stats span {
-  font-size: 30px;
+  font-size: 25px;
   color: lime;
 }
 
@@ -80,4 +81,22 @@ body {
   align-items: center;
   background-color: white;
   font-size: 50px;
+}
+button {
+  position: absolute;
+  top: 20px;
+  left: 50%;
+  transform: translateX(-50%);
+  padding: 10px 15px;
+  background-color: #6563ff;
+  border-radius: 6px;
+  border: 3px solid white;
+  font-size: 18px;
+  font-weight: bold;
+  transition: background-color 0.3s ease-in-out;
+  transition: color 0.3s ease-in-out;
+}
+button:hover {
+  background-color: white;
+  color: #6563ff;
 }
