--- a/23-Memory Card Game/style.css
+++ b/23-Memory Card Game/style.css
@@ -122,17 +122,23 @@ body {
   display: flex;
   justify-content: space-between;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.1);
+  align-items: center;
+  text-align: center;
 }
 .stats p {
   font-size: 20px;
   font-family: sans-serif;
+  border-right: 2.5px solid rgb(196, 196, 196);
+  padding-right: 25px;
 }
 .stats span {
   font-weight: bold;
 }
 button {
-  padding: 5px 8px;
+  padding: 5px 10px;
   background-color: #6563ff;
   border-radius: 6px;
   border: none;
+  color: white;
+  font-size: 16px;
 }
