--- a/24-Password Generator/style.css
+++ b/24-Password Generator/style.css
@@ -11,5 +11,33 @@ body {
   display: flex;
 }
 .container {
+  padding: 30px 0;
   margin: auto;
+  width: 90%;
+  background-color: white;
+  border-radius: 10px;
+}
+.header,
+.wrap {
+  width: 100%;
+  padding: 0 30px;
+}
+.header {
+  border-bottom: 2px solid rgba(17, 17, 17, 0.629);
+  padding-bottom: 1.5rem;
+}
+
+h1 {
+  font-family: sans-serif;
+}
+
+.passwordContainer {
+  display: flex;
+  width: 100%;
+  justify-content: space-between;
+  padding: 15px 10px;
+  border: 1px solid black;
+  border-radius: 6px;
+  margin-top: 1rem;
+  margin-bottom: 2rem;
 }
