--- a/24-Password Generator/style.css
+++ b/24-Password Generator/style.css
@@ -38,6 +38,50 @@ h1 {
   padding: 15px 10px;
   border: 1px solid black;
   border-radius: 6px;
-  margin-top: 1rem;
+  margin-top: 2rem;
   margin-bottom: 2rem;
+}
+.passwordContainer p {
+  font-size: 20px;
+  text-align: center;
+}
+.copy {
+  color: rgb(66, 133, 244);
+}
+.copy:hover {
+  cursor: pointer;
+}
+label {
+  font-size: 1.5rem;
+}
+
+.pass-length {
+  margin: 1.56rem 0 1.25rem;
+}
+.details {
+  display: flex;
+  justify-content: space-between;
+}
+.pass-length input {
+  margin-top: 5px;
+  width: 100%;
+  height: 5px;
+}
+
+.passwordSettings {
+  width: 100%;
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  gap: 15px;
+  margin-bottom: 2rem;
+}
+
+button {
+  width: 100%;
+  padding: 25px;
+  background-color: rgb(66, 133, 244);
+  color: white;
+  font-size: 1.5rem;
+  border-radius: 10px;
+  border: none;
 }
