--- a/24-Password Generator/style.css
+++ b/24-Password Generator/style.css
@@ -1,110 +1,252 @@
+@import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
+
 * {
-  margin: 0;
-  padding: 0;
   box-sizing: border-box;
 }
 
 body {
-  width: 100%;
+  background-color: #3b3b98;
+  color: #fff;
+  display: flex;
+  font-family: "Muli", sans-serif;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
   min-height: 100vh;
-  background-color: #6663ffc9;
-  display: flex;
-}
-.container {
-  padding: 30px 0;
-  margin: auto;
-  width: 90%;
-  background-color: white;
-  border-radius: 10px;
-}
-.header,
-.wrap {
-  width: 100%;
-  padding: 0 30px;
-}
-.header {
-  border-bottom: 2px solid rgba(17, 17, 17, 0.629);
-  padding-bottom: 1.5rem;
 }
 
-h1 {
-  font-family: sans-serif;
+p {
+  margin: 5px 0;
 }
 
-.passwordContainer {
-  display: flex;
-  width: 100%;
-  justify-content: space-between;
-  padding: 15px 10px;
-  border: 1px solid black;
-  border-radius: 6px;
-  margin-top: 2rem;
-  margin-bottom: 2rem;
-}
-.passwordContainer p {
-  font-size: 20px;
+h2 {
+  margin: 10px 0 20px;
   text-align: center;
 }
 
-.copy {
-  color: rgb(66, 133, 244);
-}
-.copy:hover {
-  cursor: pointer;
-}
-label {
-  font-size: 1.5rem;
-}
-.passwordContainer .password {
-  font-size: 18px;
-  opacity: 0.7;
+input[type="checkbox"] {
+  margin-right: 0;
 }
 
-.pass-length {
-  margin: 1.56rem 0 1.25rem;
+.container {
+  background-color: #23235b;
+  box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.2);
+  padding: 20px;
+  width: 350px;
+  max-width: 100%;
 }
-.details {
+
+.result-container {
+  background-color: rgba(0, 0, 0, 0.4);
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  position: relative;
+  font-size: 18px;
+  letter-spacing: 1px;
+  padding: 12px 10px;
+  height: 50px;
+  width: 100%;
+}
+
+.result-container #result {
+  word-wrap: break-word;
+  max-width: calc(100% - 40px);
+}
+
+.result-container .btn {
+  font-size: 20px;
+  position: absolute;
+  top: 5px;
+  right: 5px;
+  height: 40px;
+  width: 40px;
+}
+
+.btn {
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  padding: 8px 12px;
+  background-color: #3b3b98;
+}
+
+.btn-large {
+  display: block;
+  width: 100%;
+}
+
+.setting {
   display: flex;
   justify-content: space-between;
-}
-.details span {
-  font-size: 20px;
-}
-.pass-length input {
-  margin-top: 5px;
-  width: 100%;
-  height: 5px;
+  align-items: center;
+  margin: 15px 0;
 }
 
-.passwordSettings {
-  width: 100%;
-  display: grid;
-  grid-template-columns: 1fr 1fr;
-  gap: 15px;
-  row-gap: 25px;
-  margin-bottom: 2rem;
+@media screen and (max-width: 400px) {
+  .result-container {
+    font-size: 14px;
+  }
 }
-.option label {
-  font-size: 20px;
-  opacity: 0.7;
-  margin-left: 5px;
+
+/* SOCIAL PANEL CSS */
+.social-panel-container {
+  position: fixed;
+  right: 0;
+  bottom: 80px;
+  transform: translateX(100%);
+  transition: transform 0.4s ease-in-out;
 }
-.option:first-child {
-  pointer-events: none;
-  opacity: 0.7;
+
+.social-panel-container.visible {
+  transform: translateX(-10px);
 }
-.option input {
-  height: 19px;
-  width: 19px;
+
+.social-panel {
+  background-color: #fff;
+  border-radius: 16px;
+  box-shadow: 0 16px 31px -17px rgba(0, 31, 97, 0.6);
+  border: 5px solid #001f61;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  font-family: "Muli";
+  position: relative;
+  height: 169px;
+  width: 370px;
+  max-width: calc(100% - 10px);
+}
+
+.social-panel button.close-btn {
+  border: 0;
+  color: #97a5ce;
   cursor: pointer;
+  font-size: 20px;
+  position: absolute;
+  top: 5px;
+  right: 5px;
 }
 
-button {
-  width: 100%;
-  padding: 25px;
-  background-color: rgb(66, 133, 244);
-  color: white;
-  font-size: 1.5rem;
-  border-radius: 10px;
-  border: none;
+.social-panel button.close-btn:focus {
+  outline: none;
+}
+
+.social-panel p {
+  background-color: #001f61;
+  border-radius: 0 0 10px 10px;
+  color: #fff;
+  font-size: 14px;
+  line-height: 18px;
+  padding: 2px 17px 6px;
+  position: absolute;
+  top: 0;
+  left: 50%;
+  margin: 0;
+  transform: translateX(-50%);
+  text-align: center;
+  width: 235px;
+}
+
+.social-panel p i {
+  margin: 0 5px;
+}
+
+.social-panel p a {
+  color: #ff7500;
+  text-decoration: none;
+}
+
+.social-panel h4 {
+  margin: 20px 0;
+  color: #97a5ce;
+  font-family: "Muli";
+  font-size: 14px;
+  line-height: 18px;
+  text-transform: uppercase;
+}
+
+.social-panel ul {
+  display: flex;
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+}
+
+.social-panel ul li {
+  margin: 0 10px;
+}
+
+.social-panel ul li a {
+  border: 1px solid #dce1f2;
+  border-radius: 50%;
+  color: #001f61;
+  font-size: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 50px;
+  width: 50px;
+  text-decoration: none;
+}
+
+.social-panel ul li a:hover {
+  border-color: #ff6a00;
+  box-shadow: 0 9px 12px -9px #ff6a00;
+}
+
+.floating-btn {
+  border-radius: 26.5px;
+  background-color: #001f61;
+  border: 1px solid #001f61;
+  box-shadow: 0 16px 22px -17px #03153b;
+  color: #fff;
+  cursor: pointer;
+  font-size: 16px;
+  line-height: 20px;
+  padding: 12px 20px;
+  position: fixed;
+  bottom: 20px;
+  right: 20px;
+  z-index: 999;
+}
+
+.floating-btn:hover {
+  background-color: #ffffff;
+  color: #001f61;
+}
+
+.floating-btn:focus {
+  outline: none;
+}
+
+.floating-text {
+  background-color: #001f61;
+  border-radius: 10px 10px 0 0;
+  color: #fff;
+  font-family: "Muli";
+  padding: 7px 15px;
+  position: fixed;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  text-align: center;
+  z-index: 998;
+}
+
+.floating-text a {
+  color: #ff7500;
+  text-decoration: none;
+}
+
+@media screen and (max-width: 480px) {
+  .social-panel-container.visible {
+    transform: translateX(0px);
+  }
+
+  .floating-btn {
+    right: 10px;
+  }
 }
