--- a/24-Password Generator/style.css
+++ b/24-Password Generator/style.css
@@ -1,102 +1,135 @@
-@import url("https://fonts.googleapis.com/css?family=Muli&display=swap");
-
+/* Import Google font - Poppins */
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap");
 * {
+  margin: 0;
+  padding: 0;
   box-sizing: border-box;
+  font-family: "Poppins", sans-serif;
 }
-
 body {
-  background-color: #3b3b98;
-  color: #fff;
   display: flex;
-  font-family: "Muli", sans-serif;
-  flex-direction: column;
   align-items: center;
   justify-content: center;
-  padding: 10px;
   min-height: 100vh;
+  background: #4285f4;
 }
-
-p {
-  margin: 5px 0;
-}
-
-h2 {
-  margin: 10px 0 20px;
-  text-align: center;
-}
-
-input[type="checkbox"] {
-  margin-right: 0;
-}
-
 .container {
-  background-color: #23235b;
-  box-shadow: 0px 2px 10px rgba(255, 255, 255, 0.2);
-  padding: 20px;
-  width: 350px;
-  max-width: 100%;
+  width: 450px;
+  background: #fff;
+  border-radius: 8px;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.05);
 }
-
-.result-container {
-  background-color: rgba(0, 0, 0, 0.4);
-  display: flex;
-  justify-content: flex-start;
-  align-items: center;
+.container h2 {
+  font-weight: 600;
+  font-size: 1.31rem;
+  padding: 1rem 1.75rem;
+  border-bottom: 1px solid #d4dbe5;
+}
+.wrapper {
+  margin: 1.25rem 1.75rem;
+}
+.wrapper .input-box {
   position: relative;
-  font-size: 18px;
-  letter-spacing: 1px;
-  padding: 12px 10px;
-  height: 50px;
+}
+.input-box input {
   width: 100%;
+  height: 53px;
+  color: #000;
+  background: none;
+  font-size: 1.06rem;
+  font-weight: 500;
+  border-radius: 4px;
+  letter-spacing: 1.4px;
+  border: 1px solid #aaa;
+  padding: 0 2.85rem 0 1rem;
 }
-
-.result-container #result {
-  word-wrap: break-word;
-  max-width: calc(100% - 40px);
-}
-
-.result-container .btn {
-  font-size: 20px;
+.input-box span {
   position: absolute;
-  top: 5px;
-  right: 5px;
-  height: 40px;
-  width: 40px;
-}
-
-.btn {
-  border: none;
-  color: #fff;
+  right: 13px;
   cursor: pointer;
-  font-size: 16px;
-  padding: 8px 12px;
-  background-color: #3b3b98;
+  line-height: 53px;
+  color: #707070;
 }
-
-.btn-large {
-  display: block;
+.input-box span:hover {
+  color: #4285f4 !important;
+}
+.wrapper .pass-indicator {
   width: 100%;
+  height: 4px;
+  position: relative;
+  background: #dfdfdf;
+  margin-top: 0.75rem;
+  border-radius: 25px;
 }
-
-.setting {
+.pass-indicator::before {
+  position: absolute;
+  content: "";
+  height: 100%;
+  width: 50%;
+  border-radius: inherit;
+  transition: width 0.3s ease;
+}
+.pass-indicator#weak::before {
+  width: 20%;
+  background: #e64a4a;
+}
+.pass-indicator#medium::before {
+  width: 50%;
+  background: #f1c80b;
+}
+.pass-indicator#strong::before {
+  width: 100%;
+  background: #4285f4;
+}
+.wrapper .pass-length {
+  margin: 1.56rem 0 1.25rem;
+}
+.pass-length .details {
   display: flex;
   justify-content: space-between;
+}
+.pass-length input {
+  width: 100%;
+  height: 5px;
+}
+.pass-settings .options {
+  display: flex;
+  list-style: none;
+  flex-wrap: wrap;
+  margin-top: 1rem;
+}
+.pass-settings .options .option {
+  display: flex;
   align-items: center;
-  margin: 15px 0;
+  margin-bottom: 1rem;
+  width: calc(100% / 2);
 }
-
-@media screen and (max-width: 400px) {
-  .result-container {
-    font-size: 14px;
-  }
+.options .option:first-child {
+  pointer-events: none;
 }
-
-@media screen and (max-width: 480px) {
-  .social-panel-container.visible {
-    transform: translateX(0px);
-  }
-
-  .floating-btn {
-    right: 10px;
-  }
+.options .option:first-child input {
+  opacity: 0.7;
+}
+.options .option input {
+  height: 16px;
+  width: 16px;
+  cursor: pointer;
+}
+.options .option label {
+  cursor: pointer;
+  color: #4f4f4f;
+  padding-left: 0.63rem;
+}
+.wrapper .generate-btn {
+  width: 100%;
+  color: #fff;
+  border: none;
+  outline: none;
+  cursor: pointer;
+  background: #4285f4;
+  font-size: 1.06rem;
+  padding: 0.94rem 0;
+  border-radius: 5px;
+  text-transform: uppercase;
+  margin: 0.94rem 0 1.3rem;
 }
